--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
     <script src="script/myscript.js"></script>
 </head>
 <body>
+    <!-- quick 영역 -->
+    <div class="quick">
+        <a href="#"><img src="images/btn_franchise_go.gif" alt="go"></a>
+    </div><!-- quick -->
+
+
+    <!-- answer 영역 -->
+    <div class="answer">
+        <div class="answer_inner">
+            <h3>개설문의</h3>
+            <p>010 - 4874 - 2900</p>
+            <div class="info">
+                <form action="#">
+                    <input type="text" placeholder="이름">
+                    <input type="text" placeholder="연락처(-없이 입력)">
+                    <textarea name="" id="" placeholder="문의"></textarea>
+                    <div class="check">
+                        <a href="#">개인정보처리방침</a>
+                        <span><input type="checkbox" ></span>
+                    </div><!-- check -->
+                    
+                        <button>[자세히보기]</button>
+                        <div class="send">
+                            <button>보내기</button>
+                    </div><!-- send -->
+                    
+                </form>
+            </div><!-- info -->
+
+        </div><!-- answer_inner -->
+        <div class="top">
+            <button><a href="#header"><img src="images/top_btn.png" alt="top">TOP</a></button>
+        </div><!-- top -->
+
+    </div><!-- answer -->
+
+
     <!-- 팝업 영역 -->
     <div class="pop">
         <a href="#">배너</a>
@@ -170,12 +207,160 @@
                 <div class="best">
                     <a href="#"><img src="./images/A5hfEBtSKR9TzJ7O_20160122.png" alt="A5hfEBtSKR9TzJ7O"></a>
                 </div><!-- best -->
+                <div class="new">
+                    <ul class="new_list">
+                        <li>
+                            <a href="#">
+                                <ul>
+                                    <li><img src="images/main_menu_ico_new.png" alt="menu_ico"></li>
+                                    <li><img src="images/main_menu1.png" alt="main_menu1"></li>
+                                    <li><strong>밀키라떼(HOT/ICED)</strong></li>
+                                    <li>Milky Latte</li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <ul>
+                                    <li><img src="images/main_menu_ico_new.png" alt="menu_ico"></li>
+                                    <li><img src="images/main_menu2.png" alt="main_menu2"></li>
+                                    <li><strong>더블 카페라떼(HOT/ICED)</strong></li>
+                                    <li>Doble Caffe Latte</li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <ul>
+                                    <li><img src="images/main_menu_ico_new.png" alt="menu_ico"></li>
+                                    <li><img src="images/main_menu3.png" alt="main_menu3"></li>
+                                    <li><strong>흑당 라떼(HOT/ICED)</strong></li>
+                                    <li>Black Sugar Latte</li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <ul>
+                                    <li><img src="images/main_menu_ico_new.png" alt="menu_ico"></li>
+                                    <li><img src="images/main_menu4.png" alt="main_menu4"></li>
+                                    <li><strong>흑당 큐브 브래드</strong></li>
+                                    <li>Black Sugar Cube Bread</li>
+                                </ul>
+                            </a>
+                        </li>
+                    </ul><!-- new_list -->
+                </div><!-- new -->
 
             </div><!-- section_inner -->
 
         </div><!-- section2 -->
 
+
+        <div class="section3">
+            <div class="section3_inner">
+                <h2>프리미엄 액상 <strong>블랙 / 스위트</strong></h2>
+                <p>원두추출액을 90%사용하여 진한 커피의 향과 맛을 담았습니다.</p>
+                <a href="#">VIEW MORE &gt;</a>
+                <img src="images/main_menu_banner_img.png" alt="menu_banner">
+
+            </div><!-- section3_inner -->
+        </div><!-- section3 -->
+        <div class="section4">
+
+            <div class="s4_left">
+                <ul class="s4_left_move">
+                    <li><a href="#"><img src="images/CaYidjnEzb5qtJMk_20160126.jpg" alt="20160126"></a></li>
+                    <li><a href="#"><img src="images/CaYidjnEzb5qtJMk_20160126.jpg" alt="20160126"></a></li>
+                </ul><!-- s4_left_move -->
+            </div><!-- s4_left -->
+
+            <div class="s4_middle">
+                <div class="s4_middle_top">
+                    <a href="#">
+                        <h3>사회공헌</h3>
+                        <p>커핀그루나루는 지역사회에 <br>
+                            이바지하는 <br>
+                            사회적 책임을 수행합니다.</p>
+                            <img src="images/btn_main_article_type1.png" alt="article_type1">
+                    </a>
+
+                </div><!-- s4_middle_top -->
+                <div class="s4_middle_bottom">
+                    <a href="#">
+                        <h3>RECRUIT</h3>
+                        <p>당신의 꿈과 열정을 <br>
+                            커핀그루나루와 함께 마음껏 펼치세요</p>
+                            <img src="images/btn_main_article_type2.png" alt="article_type2">
+                    </a>
+                </div><!-- s4_middle_bottom -->
+            </div><!-- s4_middle -->
+
+            <div class="s4_right">
+                <div class="s4_right_coff">
+                    <a href="#">
+                        <h3>COFFINE
+                            FRANCHISE</h3>
+                        <p>커핀그루나루만의 노하우를 가지고 <br>
+                            성공적인 창업방법을 알려드립니다.</p>
+                        <img src="images/btn_main_article_type2.png" alt="article_type2">
+                    </a>
+                </div><!-- s4_right_coff -->
+
+            </div><!-- s4_right -->
+
+        </div><!-- section4 -->
+        <div class="section5">
+            <div class="section5_inner">
+                <ul>
+                    <li class="on"><a href="#">FACE BOOK</a></li>
+                    <li><a href="#">INSTAGRAM</a></li>
+                </ul>
+
+            </div><!-- section5_inner -->
+        </div><!-- section5 -->
+
     </section><!-- main -->
+
+
+    <footer id="footer">
+        <div class="foot_inner">
+            <div class="f_logo">
+                <img src="images/ft_logo.gif" alt="logo">
+            </div><!-- f_logo -->
+
+            <div class="f_wrap">
+                <ul class="f_gnb">
+                    <li><a href="#">마케팅 제휴문의</a></li>
+                    <li><a href="#">원 · 부자재 문의</a></li>
+                    <li><a href="#">개인정보취급방침</a></li>
+                    <li><a href="#">이용약관</a></li>
+                </ul><!-- f_gnb -->
+                <ul class="f_gnb_1">
+                    <li><a href="#">찾아오시는 길</a></li>
+                    <li><a href="#">신규입점제안</a></li>
+                    <li><a href="#">전체메뉴</a></li>
+                </ul><!-- f_gnb_1 -->
+                <div class="address">
+                    <address>
+                        사업자등록번호 215-87-06529 서울시 송파구 백제고분로50길 7(방이동) 대표자 김은희    고객센터 02-2202-0791 FAX 02-2202-0807
+                    </address>
+                    <p>COPYRIGHT&copy; 2016 COFFINE GURUNARU ALL RIGHTS RESERVED.</p>
+                </div><!-- address -->
+            </div><!-- f_wrap -->
+
+            <div class="sns_wrap">
+                <ul class="sns">
+                    <li><a href="#" class="fa">FA</a></li>
+                    <li><a href="#" class="in">in</a></li>
+                </ul>
+                <a href="#" class="sp">스피커</a>
+            </div><!-- sns_wrap -->
+
+        </div><!-- foot_inner -->
+
+    </footer><!-- footer -->
+
 
 </body>
 </html>
